avoid text overflow in main nav

--- a/viewer/style/avnav_viewer_new.less
+++ b/viewer/style/avnav_viewer_new.less
@@ -1032,6 +1032,10 @@ span.valuePrefix{
       text-align: center;
       border-bottom: unset;
       width: @mainNavItemWidth;
+      .listMain{
+        max-width: @mainNavItemWidth;
+        overflow: hidden;
+      }
     }
   }
 }
